alignment bug fixed :)

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -22,7 +22,7 @@ color:white;
 text-shadow: 2px 2px black;
 text-align:center;
 padding:5px;
-width:100%;
+width: auto;
 }
 section {
 float:center;
